--- a/app/src/main/res/layout/activity_distributed_orders.xml
+++ b/app/src/main/res/layout/activity_distributed_orders.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrdersForDistribution"
+    tools:context=".DistributedOrders"
     android:orientation="vertical"
     android:background="@drawable/bg" >
 
@@ -19,7 +19,7 @@
             android:layout_height="84dp"
             android:fontFamily="@font/amarante"
             android:paddingTop="10dp"
-            android:text="@string/orders_for_distribution_welcome"
+            android:text="@string/distributed_orders_welcome"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="36sp"
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
-            android:text="@string/ordered_food_name"
+            android:text="@string/distributed_orders_food_name"
             android:textColor="#FFFFFFFF"
             android:textSize="20dp" />
 
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
-            android:text="@string/ordered_food_quantity"
+            android:text="@string/distributed_orders_food_quantity"
             android:textColor="#FFFFFFFF"
             android:textSize="20dp" />
 
@@ -59,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
-            android:text="@string/ordered_food_price"
+            android:text="@string/distributed_orders_food_price"
             android:textColor="#FFFFFFFF"
             android:textSize="20dp" />
 
@@ -67,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
-            android:text="@string/ordered_food_delivery_mobile"
+            android:text="@string/distributed_orders_mobile"
             android:textColor="#FFFFFFFF"
             android:textSize="20dp" />
 
@@ -76,33 +76,10 @@
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
-            android:text="@string/ordered_food_delivery_address"
+            android:text="@string/distributed_orders_address"
             android:textColor="#FFFFFFFF"
             android:textSize="20dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/markAsShipped"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rounded_edittext"
-                android:text="@string/ordered_food_mark_as_shipped_btn_txt"
-                android:textColor="#0027FF" />
-
-            <Button
-                android:id="@+id/markAsCancel"
-                android:layout_width="150dp"
-                android:layout_marginLeft="40dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rounded_edittext"
-                android:text="@string/ordered_food_mark_as_cancel_btn_txt"
-                android:textColor="#0027FF" />
-
-        </LinearLayout>
 
 
 
