--- a/app/src/main/res/layout/activity_sample_orders_for_distribuation.xml
+++ b/app/src/main/res/layout/activity_sample_orders_for_distribuation.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".SampleOrdersForDistribuation">
+    tools:context=".SampleOrdersForDistributing">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recView"
-        android:layout_width="409dp"
-        android:layout_height="540dp"
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
