IT19208718 tried RecyclerView on rescustom.xml, activity_sample_orders_for_distribuation.xml, Adapter.javar and SampleOrdersForDistribuation.java

--- a/app/src/main/res/layout/rescustom.xml
+++ b/app/src/main/res/layout/rescustom.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/rescustom">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -50,23 +51,23 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ordersForDistribution"
-                app:layout_constraintVertical_bias="0.1"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/gkburger" />
 
             <TextView
                 android:id="@+id/orderedListFoodName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="57dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="23dp"
-                android:layout_marginEnd="154dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="194dp"
                 android:text="@string/ordered_food_name"
                 android:textColor="#FFFFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.27"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/orderedListFoodImage"
                 app:layout_constraintTop_toBottomOf="@+id/ordersForDistribution"
                 app:layout_constraintVertical_bias="0.0" />
@@ -75,16 +76,16 @@
                 android:id="@+id/orderedListFoodQty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="188dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="152dp"
                 android:text="@string/ordered_food_quantity"
                 android:textColor="#FFFFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.278"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/orderedListFoodImage"
                 app:layout_constraintTop_toBottomOf="@+id/orderedListFoodName"
                 app:layout_constraintVertical_bias="0.0" />
@@ -93,14 +94,14 @@
                 android:id="@+id/orderedListFoodMobile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="34dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="147dp"
                 android:text="@string/ordered_food_delivery_mobile"
                 android:textColor="#FFFFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.076"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/orderedListFoodImage"
                 app:layout_constraintTop_toBottomOf="@+id/orderedListFoodPrice" />
 
@@ -108,7 +109,7 @@
                 android:id="@+id/orderedListFoodPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="187dp"
                 android:layout_marginBottom="116dp"
@@ -144,9 +145,9 @@
                 android:id="@+id/orderedListFoodMarkAsShipped"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="31dp"
-                android:layout_marginEnd="282dp"
+                android:layout_marginEnd="40dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/rounded_edittext"
                 android:padding="12dp"
@@ -154,7 +155,7 @@
                 android:textColor="#0027FF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.294"
+                app:layout_constraintHorizontal_bias="0.18"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/orderedListFoodAddress"
                 app:layout_constraintVertical_bias="0.0" />
@@ -166,14 +167,14 @@
                 android:layout_marginStart="106dp"
                 android:layout_marginTop="29dp"
                 android:layout_marginEnd="60dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/rounded_edittext"
                 android:padding="12dp"
                 android:text="@string/ordered_food_mark_as_cancel_btn_txt"
                 android:textColor="#0027FF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.731"
+                app:layout_constraintHorizontal_bias="0.812"
                 app:layout_constraintStart_toEndOf="@+id/orderedListFoodMarkAsShipped"
                 app:layout_constraintTop_toBottomOf="@+id/orderedListFoodAddress"
                 app:layout_constraintVertical_bias="0.0" />
