--- a/app/src/main/res/layout/fragment_add_new_rider.xml
+++ b/app/src/main/res/layout/fragment_add_new_rider.xml
@@ -114,7 +114,7 @@
         tools:ignore="RtlSymmetry" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/addNewRider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_edittext"
