--- a/app/src/main/res/layout/rescustom.xml
+++ b/app/src/main/res/layout/rescustom.xml
@@ -45,7 +45,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:contentDescription="@string/ordered_food_list_img_txt"
+                android:contentDescription=""
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
