IT19208718 Suraweera SMHM - rider login/logout/update/add/delete DONE

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,9 +33,10 @@
         <menu>
 
             <item
-                android:id="@+id/nav_rider_account"
+                android:id="@+id/riderLogin"
                 android:icon="@drawable/ic_bike"
-                android:title="@string/menu_delivery" />
+                android:title="Rider Login" />
+
 
         </menu>
 
