--- a/app/src/main/res/layout/activity_rider_portal.xml
+++ b/app/src/main/res/layout/activity_rider_portal.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- IT19208718 S.M.H.M.Suraweera -->
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.rideraccount.RiderAccount"
+    tools:context=".RiderPortal"
     android:background="@drawable/bg">
 
+
     <TextView
-        android:id="@+id/riderName"
+        android:id="@+id/theRiderName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/amarante"
@@ -37,13 +36,12 @@
         app:layout_constraintVertical_bias="0.188" />
 
     <Button
-        android:id="@+id/riderMyAccount"
+        android:id="@+id/MyAccountRiderButton"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
         android:text="@string/rider_profile_manage_account"
         android:textColor="#0027FF"
-        android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -52,7 +50,7 @@
         app:layout_constraintVertical_bias="0.797" />
 
     <Button
-        android:id="@+id/riderOrdersForDistribution"
+        android:id="@+id/OrdersForDistributionButton"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
@@ -66,7 +64,7 @@
         app:layout_constraintVertical_bias="0.424" />
 
     <Button
-        android:id="@+id/riderDailySalesReport"
+        android:id="@+id/DailySalesReportButton"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
@@ -80,7 +78,7 @@
         app:layout_constraintVertical_bias="0.546" />
 
     <Button
-        android:id="@+id/riderDistributedOrders"
+        android:id="@+id/DistributedOrdersButton"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
@@ -94,7 +92,7 @@
         app:layout_constraintVertical_bias="0.667" />
 
     <Button
-        android:id="@+id/riderLogOut"
+        android:id="@+id/riderLogOutButton"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
