--- a/app/src/main/res/layout/activity_update_rider_details.xml
+++ b/app/src/main/res/layout/activity_update_rider_details.xml
@@ -32,7 +32,7 @@
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -41,7 +41,9 @@
         app:layout_constraintHorizontal_bias="0.829"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.195" />
+        app:layout_constraintVertical_bias="0.195"
+        android:autofillHints=""
+        tools:ignore="LabelFor,RtlSymmetry" />
 
     <EditText
 
@@ -50,7 +52,7 @@
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:textColor="#B53F3F"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -60,7 +62,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.655"
-        tools:ignore="RtlSymmetry" />
+        tools:ignore="RtlSymmetry"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/riderMobileUpdated"
@@ -99,7 +102,7 @@
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -118,7 +121,7 @@
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -128,7 +131,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.424"
-        tools:ignore="RtlSymmetry" />
+        tools:ignore="RtlSymmetry,TextFields" />
 
 
     <TextView
@@ -167,9 +170,8 @@
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
-        android:editable="false"
         android:inputType="none"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -204,7 +206,7 @@
         android:background="@drawable/rounded_edittext"
         android:editable="false"
         android:inputType="none"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -237,7 +239,7 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
-        android:text="Delete Account"
+        android:text="@string/delete_account"
         android:textColor="#0027FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -251,7 +253,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
-        android:text="Update"
+        android:text="@string/update"
         android:textColor="#0027FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
