--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,14 +25,41 @@
         android:id="@+id/nav_request_supply"
         android:name="com.teamevox.freshfred.ui.supply.RequestSupplyFragment"
         android:label="@string/menu_request_supply" />
-    <fragment
-        android:id="@+id/nav_rider_account"
-        android:name="com.teamevox.freshfred.ui.rideraccount.RiderAccount"
-        android:label="@string/app_name"
-        tools:layout="@layout/fragment_rider_interface" />
+
     <activity
-        android:id="@+id/updateRiderDetails"
-        android:name="com.teamevox.freshfred.UpdateRiderDetails"
-        android:label="activity_update_rider_details"
-        tools:layout="@layout/activity_update_rider_details" />
+        android:id="@+id/riderLogin"
+        android:name="com.teamevox.freshfred.RiderLogin"
+        android:label="activity_rider_login"
+        tools:layout="@layout/activity_rider_login" />
+    <activity
+        android:id="@+id/addNewSupplier"
+        android:name="com.teamevox.freshfred.AddNewSupplier"
+        android:label="activity_add_new_supplier"
+        tools:layout="@layout/activity_add_new_supplier" />
+    <activity
+        android:id="@+id/distributedOrders"
+        android:name="com.teamevox.freshfred.DistributedOrders"
+        android:label="activity_distributed_orders"
+        tools:layout="@layout/activity_distributed_orders" />
+    <activity
+        android:id="@+id/ordersForDistribution2"
+        android:name="com.teamevox.freshfred.OrdersForDistribution"
+        android:label="activity_orders_for_distribution"
+        tools:layout="@layout/activity_orders_for_distribution" />
+    <activity
+        android:id="@+id/riderPortal"
+        android:name="com.teamevox.freshfred.RiderPortal"
+        android:label="activity_rider_portal"
+        tools:layout="@layout/activity_rider_portal" />
+    <activity
+        android:id="@+id/sampleOrdersForDistributing"
+        android:name="com.teamevox.freshfred.SampleOrdersForDistributing"
+        android:label="activity_sample_orders_for_distribuation"
+        tools:layout="@layout/activity_sample_orders_for_distribuation" />
+    <activity
+        android:id="@+id/supplierInterface"
+        android:name="com.teamevox.freshfred.SupplierInterface"
+        android:label="activity_supplier_interface"
+        tools:layout="@layout/activity_supplier_interface" />
+
 </navigation>
